[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros", "multipart"] }
axum-macros = "0.3.7"
chrono = "0.4.26"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
log = "0.4.17"
rust-s3 = "0.33.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
simple_logger = "4.1.0"
surrealdb = { version = "1.0.0-beta.9", features = ["kv-mem"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
anyhow = "1.0.71"
httpc-test = "0.1.2"
